<resources>
    <string name="app_name">Proove</string>
    <string name="privacy_policy_context"><![CDATA[This Agreement is made between User (hereinafter referred to as \"You\") and Yscoco Technology Co., LTD and its affiliate Shenzhen Acoustic Technology Co., LTD. (hereinafter referred to as \"Us\") in connection with the products and network services provided by us, including our website and the network services we are providing and may provide to you in the future. (hereinafter collectively referred to as the \"Products and Services\"), which includes the User Agreement, User Personal Information Protection Policies including but not limited to User Rules, Player Regulations, Game Announcements, Tips and Notices, etc.) and their amended versions, which shall form an integral part of this Agreement once officially published (hereinafter referred to as the \"Agreement\").\n\nTo protect your rights and interests, please read the terms of this Agreement carefully before registering to use the various products and services provided by the Company. If you are under 18 years of age, read this Agreement with your legal guardian and sign this Agreement only after obtaining all terms of this Agreement from your guardian. In particular, we would like to draw your attention to clauses that exempt or limit our liability, clauses that limit users\' rights, clauses that specify dispute settlement methods and jurisdiction. Please re-read the foregoing terms before confirming your agreement or using our products and services.\n\nBy clicking \"Agree\" or registering, starting to use and/or continuing to use the Products and Services provided by us, you agree to and are willing to comply with all of the following provisions; In addition, we would like to remind you that we reserve the right to modify, add or delete the terms of this Agreement at any time based on the consideration of our own, users and the ever-changing market conditions. In case of any modification, addition or deletion of the terms of this Agreement, we will notify you by pop-up window in APP or other appropriate means. If you do not agree with the contents modified, added or deleted by us, you may stop using our products and services. If you continue to use the Products and Services provided by us, you shall be deemed to have agreed and accepted the modification, addition or deletion of this Agreement, and shall not claim any compensation or compensation.\nI. Service content\n1. The specific contents of our products and services are provided by us according to the actual situation, such as software (APP), forums (BBS), emails, personal comments, etc. We reserve the right to change, interrupt or terminate some or all of the Network services at any time.\n2. We may charge certain fees for some of our products or services when providing them. In this case, we will make a clear prompt on the relevant page. If you do not agree to pay such fees, you will not accept the products or services in question.\n3. Please understand that we only provide products and services. In addition, the equipment related to the products and services (such as computers, modems and other devices related to Internet access) and the costs required (such as telephone charges and Internet access charges for Internet access) shall be borne by you.\n4. You should use genuine software to receive network services. You may obtain the software directly from our website or from a third party authorized by us. If you obtain our products and services from an unauthorized third party, it will be deemed that you are not authorized, we cannot guarantee that you can normally use the products or services, and you will bear the possible losses incurred thereby.\n5. During the use of the products and services provided by us, you have the right to supervise whether we and our staff provide products and services to you in accordance with the standards published by us, and you may also put forward comments and suggestions related to our products and services to us at any time through the contact information published herein.]]></string>
    <string name="user_protocol_context"><![CDATA[This Agreement is made between User (hereinafter referred to as \"You\") and Yscoco Technology Co., LTD and its affiliate Shenzhen Acoustic Technology Co., LTD. (hereinafter referred to as \"Us\") in connection with the products and network services provided by us, including our website and the network services we are providing and may provide to you in the future. (hereinafter collectively referred to as the \"Products and Services\"), which includes the User Agreement, User Personal Information Protection Policies including but not limited to User Rules, Player Regulations, Game Announcements, Tips and Notices, etc.) and their amended versions, which shall form an integral part of this Agreement once officially published (hereinafter referred to as the \"Agreement\").\n\nTo protect your rights and interests, please read the terms of this Agreement carefully before registering to use the various products and services provided by the Company. If you are under 18 years of age, read this Agreement with your legal guardian and sign this Agreement only after obtaining all terms of this Agreement from your guardian. In particular, we would like to draw your attention to clauses that exempt or limit our liability, clauses that limit users\' rights, clauses that specify dispute settlement methods and jurisdiction. Please re-read the foregoing terms before confirming your agreement or using our products and services.\n\nBy clicking \"Agree\" or registering, starting to use and/or continuing to use the Products and Services provided by us, you agree to and are willing to comply with all of the following provisions; In addition, we would like to remind you that we reserve the right to modify, add or delete the terms of this Agreement at any time based on the consideration of our own, users and the ever-changing market conditions. In case of any modification, addition or deletion of the terms of this Agreement, we will notify you by pop-up window in APP or other appropriate means. If you do not agree with the contents modified, added or deleted by us, you may stop using our products and services. If you continue to use the Products and Services provided by us, you shall be deemed to have agreed and accepted the modification, addition or deletion of this Agreement, and shall not claim any compensation or compensation.\nI. Service content\n1. The specific contents of our products and services are provided by us according to the actual situation, such as software (APP), forums (BBS), emails, personal comments, etc. We reserve the right to change, interrupt or terminate some or all of the Network services at any time.\n2. We may charge certain fees for some of our products or services when providing them. In this case, we will make a clear prompt on the relevant page. If you do not agree to pay such fees, you will not accept the products or services in question.\n3. Please understand that we only provide products and services. In addition, the equipment related to the products and services (such as computers, modems and other devices related to Internet access) and the costs required (such as telephone charges and Internet access charges for Internet access) shall be borne by you.\n4. You should use genuine software to receive network services. You may obtain the software directly from our website or from a third party authorized by us. If you obtain our products and services from an unauthorized third party, it will be deemed that you are not authorized, we cannot guarantee that you can normally use the products or services, and you will bear the possible losses incurred thereby.\n5. During the use of the products and services provided by us, you have the right to supervise whether we and our staff provide products and services to you in accordance with the standards published by us, and you may also put forward comments and suggestions related to our products and services to us at any time through the contact information published herein.]]></string>
    <string name="my_devices">My devices</string>
    <string name="recent_devices">Recent devices</string>
    <string name="headphones">Headphones</string>
    <string name="smartwatch">Smartwatch</string>
    <string name="electric_scooters">Electric scooters</string>
    <string name="device_search">Device search</string>
    <string name="device_search2">Device search</string>
    <string name="turn_on_the_sound">Turn on the sound</string>
    <string name="navigation">Navigation</string>
    <string name="eq_settings">EQ settings</string>
    <string name="installed">Installed</string>
    <string name="adjust">Adjust</string>
    <string name="key_settings">Key settings</string>
    <string name="change_the_name">Change the name</string>
    <string name="ota_update">OTA update</string>
    <string name="more_settings">More settings</string>
    <string name="factory_settings">Factory settings</string>
    <string name="reset_settings_context">Are you sure you want to factory reset your headset? All headset functions will be reset, and you will need to reconnect the headset.</string>
    <string name="reset">Reset</string>
    <string name="tv_null">The modified device name cannot be null!</string>
    <string name="changing_the_name_of_the_set">Changing the name\nof the set</string>
    <string name="custom_sound_effect_names_cannot_be_empty">Custom sound effect names cannot be empty!</string>
    <string name="custom_sound">Custom sound</string>
    <string name="save">Save</string>
    <string name="enter_a_new_name">Enter a new name</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="one_touch">One touch</string>
    <string name="two_touches">Two touches</string>
    <string name="three_touches">Three touches</string>
    <string name="press_and_hold">Press and hold</string>
    <string name="discover_a_new_version">Discover a new version</string>
    <string name="update_completed_successfully">Update completed successfully</string>
    <string name="please_wait_for_an_update">Please wait for an update…</string>
    <string name="home">Home</string>
    <string name="close">Close</string>
    <string name="are_you_sure_you_want_to_update_the_nota">Are you sure you want to update the \nOTA?</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="pop_up_window">Pop-up window</string>
    <string name="language">Language</string>
    <string name="dark_theme">Dark theme</string>
    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="user_protocol">User protocol</string>
    <string name="remove_device">Remove device</string>
    <string name="bright_theme">Bright theme</string>
    <string name="location">Location</string>
    <string name="location_context">The authorized location and nearby device permissions are required for device scanning and connection</string>
    <string name="confirm">Confirm</string>
    <string name="the_location_service_is_not_enabled">The location service is not enabled</string>
    <string name="whether_to_switch_to_the_location_service_setting_page">Whether to switch to the location service setting page?</string>
    <string name="bluetooth_not_turned_on">Bluetooth not turned on</string>
    <string name="whether_to_jump_to_the_bluetooth_settings_screen">Whether to jump to the Bluetooth Settings screen?</string>
    <string name="are_you_sure_you_want_to_remove_the_device_from_the_proove_app">Are you sure you want to remove the device from the Proove app?</string>
    <string name="remove">Remove</string>
    <string name="changing_the_name_nof_the_device">Changing the name\nof the device</string>
</resources>