<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/bg_dialog_24dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_msg_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:minHeight="40dp"
            android:text="@string/ota_update"
            android:textColor="@color/tv_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/iv_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/iv_back"
            style="@style/IcDialogClose"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/are_you_sure_you_want_to_update_the_nota"
            android:textColor="@color/dialog_ota_update_tv_color"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_back"
            app:layout_constraintStart_toStartOf="@+id/tv_msg_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_msg_title" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/tv_ok"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/but_ota_update_bg_color"
            android:gravity="center"
            android:text="@string/update"
            android:textColor="@color/dialog_but_ota_update_tv_color"
            android:textSize="16sp"
            app:cornerRadius="100dp"
            app:elevation="0dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_content" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/dialog_but_ota_cancel_bg_color"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/dialog_but_ota_cancel_tv_color"
            android:textSize="16sp"
            app:cornerRadius="100dp"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_ok"
            app:layout_constraintTop_toTopOf="@+id/tv_ok" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>