<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"

        android:background="@drawable/bg_dialog_24dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/changing_the_name_nof_the_device"
            android:textColor="@color/tv_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/iv_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/iv_back"
            style="@style/IcDialogClose"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="47dp"
            android:background="@drawable/bg_item_device_24dp_line_1dp"
            android:gravity="center_vertical"
            android:hint="@string/enter_a_new_name"
            android:paddingHorizontal="24dp"
            android:textColor="@color/tv_color"
            android:textColorHint="@color/tv_hint_color"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_back"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/but_save"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/dialog_but_ota_update_bg_color"
            android:text="@string/save"
            android:textColor="@color/dialog_but_ota_update_tv_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="24dp"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="@+id/editText"
            app:layout_constraintStart_toStartOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/editText" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>